[package]
name = "gmsf-to-midi"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
panic = 'abort'
strip = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.94"